syntax = "proto3";
package My.Models;

import "PhoneType.proto";

message PhoneNumber {
	string number = 1;
	PhoneType type = 2;
}